# zephyr

./: CMakeLists.txt
boards/nxp/mimxrt685_evk/: mimxrt685_evk_mimxrt685s_cm33.dts
drivers/sensor/ti/: CMakeLists.txt  Kconfig
drivers/sensor/ti/tmp11x_rs/: CMakeLists.txt  Cargo.toml  Kconfig  build.rs  tmp11x.c
drivers/sensor/ti/tmp11x_rs/src/: lib.rs
dts/bindings/sensor/: ti,tmp11x-rs.yaml
include/zephyr/drivers/: sensor.h
samples/sensor/tmp11x/src/: main.c
tests/drivers/build_all/sensor/: sensors_trigger_global.conf  sensors_trigger_none.conf  sensors_trigger_own.conf
