[package]
name = "tmp11x_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
embedded-sensors-hal = "0.1.0"
log = "0.4.22"
spin = "0.10.0"
# TODO add zephyr dependencies after fixing build dependencies
# zephyr = { path = "../../../../../modules/lang/rust/zephyr" }

[build-dependencies]
zephyr-build = { path = "../../../../../modules/lang/rust/zephyr-build" }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
panic = "abort"

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
panic = "abort"

[lints.clippy]
suspicious = "forbid"
correctness = "forbid"
perf = "forbid"
style = "forbid"
